--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+title: Walter Bolitto
+description: Conteúdo adicional das aulas de química do Cursinho Comunitário A-Sol (Turma de 2022)
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
